src/dialog/Dialog/Dialog.scss
.df-dialog {
    $self: &;

    &_with_vertical_tabs {
        display: flex;

        #{$self}__field-wrapper {
            width: 418px;

            &.df-dialog__field-wrapper_type_textarea,
            &.df-dialog__field-wrapper_type_block,
            &_full-width {
                width: 100%;
            }
        }
    }

    &__caption {
        font-size: var(--g-text-header-1-font-size);
        line-height: var(--g-text-header-1-line-height);
        font-weight: var(--g-text-header-font-weight);
    }

    &__body {
        &_with_vertical_tabs {
            border-top: 1px solid var(--g-color-line-generic);
            border-bottom: 1px solid var(--g-color-line-generic);

            padding: 0px;
        }
    }

    &__tabs-control {
        &_vertical {
            background-color: var(--g-color-base-generic-ultralight);
            min-width: 20%;
        }
    }

    &__tabs-content {
        flex-grow: 1;

        &_with_vertical_tabs {
            padding: 1em;
            padding-right: 32px;
        }

        &-item {
            &_hidden {
                display: none;
            }
        }
    }

    &__separator {
        border-top: 1px solid var(--g-color-line-generic);
        padding-bottom: 1ex;
    }

    .g-tabs {
        position: relative;

        &__tab {
            display: flex;
            align-items: center;
        }
    }

    &__error-message {
        color: var(--g-color-text-danger);
        margin-top: 2px;
        font-size: var(--g-text-body-1-font-size);
        line-height: var(--g-text-body-1-line-height);
    }

    &__section-title {
        font-size: var(--g-text-subheader-3-font-size);
        line-height: var(--g-text-subheader-3-line-height);
        font-weight: var(--g-text-subheader-font-weight);
        margin-bottom: var(--g-text-subheader-3-line-height);
        margin-top: var(--g-text-subheader-3-line-height);

        &:first-child {
            margin-top: 0;
        }
    }

    &__field-group {
        display: flex;
        flex-direction: row;
        min-height: 52px;
        justify-content: space-between;

        &_type_textarea {
            flex-direction: column;
            min-height: 100px;
        }

        &_type_block {
            min-height: 0;
        }

        &_full-width {
            flex-wrap: wrap;
        }
    }

    &__field-error {
        padding-top: 2px;
        color: var(--g-color-text-danger);
    }

    &__field-wrapper {
        width: 450px;
        margin-bottom: 15px;

        &_empty {
            color: var(--g-color-text-secondary);
        }

        &_type_block,
        &_type_textarea {
            width: 100%;
        }

        &_type_plain {
            padding-top: 6px;
        }

        &_full-width {
            width: 100%;
            padding-top: 12px;
        }
    }

    &__field-warning {
        margin-top: 2px; /* top offset of warning text from a control */
        color: var(--g-color-text-secondary);

        /*
        15px height + 2px top offset of error text from a control
        + 2px top offset of warning text from the error text
        */
        .yc-field-wrapper_state_error + & {
            margin-top: 19px;
        }
    }

    &__field-warning-content {
        margin-left: 7px;
        font-size: var(--g-text-body-1-font-size);
        line-height: var(--g-text-body-1-line-height);
        vertical-align: middle;
    }

    &__label {
        padding-top: 5px;
        display: flex;
        font-size: var(--g-text-body-2-font-size);
    }
    &__label-text {
        margin-right: 5px;

        &_required:after {
            content: '*';
            color: var(--g-color-text-danger);
        }
    }

    &__waiting-message {
        position: relative;
    }
    &__waiting-message-inner {
        position: absolute;
        top: 16px;
        left: 0;
        right: 0;

        font-size: var(--g-text-body-2-font-size);
        color: var(--g-color-text-light-primary);
        background-color: var(--g-color-base-info-medium);
        text-align: center;

        padding-top: 10px;
        padding-bottom: 8px;
        border-radius: 5px;

        .g-icon {
            margin-right: 8px;
        }
    }

    &__tab-wrapper {
        display: flex;
        align-items: center;
        min-height: 40px;
    }

    &__tab-remove-icon {
        margin-left: 5px;
        cursor: pointer;
    }

    &__tab-warning-icon {
        margin-right: 3px;
    }

    &__q-icon {
        position: relative;
        top: 2px;
    }
}

.df-page-dialog {
    width: 720px;

    --_--side-padding: 32px;

    &__wrapper {
        width: 100%;
        display: flex;
        justify-content: center;
    }

    &__title {
        line-height: 24px;
        display: flex;
        align-items: center;
        justify-content: flex-start;
        color: var(--g-color-text-primary);
        font-size: 19px;
        font-weight: 700;
    }

    &__body {
        flex: 1 1 100%;
    }

    .g-dialog-header {
        padding-left: 32px;
        padding-right: 32px;
    }
}

